Added routing for Discover and Explore pages; created pages for offering details and to create and edit offerings; also added tabs;

--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>places</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-tabs>
+    <ion-tab-bar slot='bottom'>
+      <ion-tab-button tab="discover">
+        <ion-label>Explore</ion-label>
+        <ion-icon name="search"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="offers">
+        <ion-label>Experiences</ion-label>
+        <ion-icon name="card"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
