--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,6 +68,7 @@
   --ion-color-medium-tint: #9d9fa6;
 
   /** light **/
+  // --ion-background-color:#000000;
   --ion-color-light: #f4f5f8;
   --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
