--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,9 +1,34 @@
-<ion-header>
+<ion-header >
   <ion-toolbar>
-    <ion-title>discover</ion-title>
+    <ion-title>Explore</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+<ion-content slot='fixed'>
+  <ion-grid>
+    <ion-row>
+      <ion-col >
+        <ion-img style="height:100%;"src='/assets/featuredImg.jpg' ></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-label style="text-align:center">
+    <h1 style="font-size:3rem;">Discover Experiences</h1>
+  </ion-label>
+  <ion-grid>
+    <ion-row>
+    <ion-col  size="12" size-sm="8" offset-sm="1"   *ngFor="let loadedPlace of loadedPlaces">
+        <ion-item >
+        <ion-thumbnail style="width: 30%; height: 200px;" slot="start">
+          <ion-img  [src]="loadedPlace.imageUrl"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <h2 style="text-align:center;">{{loadedPlace.title}}</h2>
+          <p>{{loadedPlace.description}}</p>
+        </ion-label>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  </ion-grid>
 </ion-content>
