Added Offer's Page added routing for offers page and for creating new offers

--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -1,5 +1,9 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offers">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title>offer-bookings</ion-title>
   </ion-toolbar>
 </ion-header>
