--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -13,19 +13,22 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-card-content>
+  </ion-card-content>
   <ion-label style="text-align:center">
     <h1 style="font-size:3rem;">Discover Experiences</h1>
   </ion-label>
   <ion-grid>
     <ion-row>
     <ion-col  size="12" size-sm="8" offset-sm="1"   *ngFor="let loadedPlace of loadedPlaces">
-        <ion-item >
+        <ion-item [routerLink]="['/','places','tabs','discover',loadedPlace.id]" >
         <ion-thumbnail style="width: 30%; height: 200px;" slot="start">
           <ion-img  [src]="loadedPlace.imageUrl"></ion-img>
         </ion-thumbnail>
         <ion-label>
           <h2 style="text-align:center;">{{loadedPlace.title}}</h2>
           <p>{{loadedPlace.description}}</p>
+          <ion-card-subtitle>{{loadedPlace.price | currency}}</ion-card-subtitle>
         </ion-label>
       </ion-item>
     </ion-col>
