--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,9 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>Available Experiences</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="/places/tabs/offers/new">
+        <ion-icon name="add" slot="icon-only">
+        </ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="1" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
+        <ion-item>
+        <ion-thumbnail style="width: 30%; height: 200px;" slot="start">
+          <ion-img  [src]="offer.imageUrl"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <h2 style="text-align:center;">{{offer.title}}</h2>
+          <p>{{offer.description}}</p>
+          <ion-card-subtitle>{{offer.price | currency}}</ion-card-subtitle>
+        </ion-label>
+      </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
