Added Edit Page For Booking's added routings to edit the offerings and nav button on the page

--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,9 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-offer</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offers">
+      </ion-back-button>
+    </ion-buttons>
+    <ion-title>Edit Experience</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content style="text-align:center;">
+  <ion-title style="margin:50px;">{{place.title}}</ion-title>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-img [src]="place.imageUrl" ></ion-img>
+        <ion-description> {{place.description}} </ion-description>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
