--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-offer</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offers">
+      </ion-back-button>
+    </ion-buttons>
+    <ion-title>Offer An Experience</ion-title>
   </ion-toolbar>
 </ion-header>
 
