Added Authentication for the app authentication just has an dummy logic for now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <ion-item >
+            <ion-img src='/assets/Logo.png' ></ion-img>
+          </ion-item>
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+
+      <ion-list>
+        <ion-menu-toggle>
+        <ion-item routerLink="/places/tabs/discover">
+        <ion-icon slot="start" name="boat"></ion-icon>
+        <ion-label>Explore</ion-label>
+        </ion-item>
+        <ion-item routerLink="/bookings">
+        <ion-icon slot="start" name="cart"></ion-icon>
+        <ion-label>My Experiences</ion-label>
+      </ion-item>
+        <ion-item (click)="onLogout()" button>
+        <ion-icon slot="start" name="exit"></ion-icon>
+        <ion-label>Logout</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+      </ion-list>
+
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
