--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,9 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Sign Up or Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+    <ion-button (click)="onLogin()">
+      Login
+    </ion-button>
 </ion-content>
