--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -14,7 +14,7 @@
     <ion-row>
       <ion-col size="6" offset="3">
         <ion-img [src]="place.imageUrl" ></ion-img>
-        <ion-description> {{place.description}} </ion-description>
+        <p> {{place.description}} </p>
       </ion-col>
     </ion-row>
   </ion-grid>
