--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,10 +3,22 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title>place-detail</ion-title>
+    <ion-title>Experience Detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-    <ion-button margin (click)="onBookPlace()">Book</ion-button>
+
+<ion-content style="text-align:center;">
+  <ion-title style="margin:50px;">{{place.title}}</ion-title>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="8" offset="2">
+        <ion-img [src]="place.imageUrl" ></ion-img>
+        <p> {{place.description}} </p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+
+<ion-button margin (click)="onBookPlace()">Book</ion-button>
