--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/places/tabs/offers">
+      <ion-back-button [defaultHref]="['/','places','tabs','offers',place.id]">
       </ion-back-button>
     </ion-buttons>
     <ion-title>Edit Experience</ion-title>
@@ -14,7 +14,7 @@
     <ion-row>
       <ion-col size="6" offset="3">
         <ion-img [src]="place.imageUrl" ></ion-img>
-        <ion-description> {{place.description}} </ion-description>
+        <p> {{place.description}} </p>
       </ion-col>
     </ion-row>
   </ion-grid>
