--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -9,16 +9,14 @@
 
 
 <ion-content style="text-align:center;">
-  <ion-title style="margin:50px;">{{place.title}}</ion-title>
   <ion-grid>
     <ion-row>
       <ion-col size="8" offset="2">
         <ion-img [src]="place.imageUrl" ></ion-img>
+        <ion-title>{{place.title}}</ion-title>
         <p> {{place.description}} </p>
+        <ion-button margin (click)="onBookPlace()">Book</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
-
-
-<ion-button margin (click)="onBookPlace()">Book</ion-button>
