--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -16,8 +16,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="1" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
+
         <ion-item>
-        <ion-thumbnail style="width: 30%; height: 200px;" slot="start">
+        <ion-thumbnail style="width: 30%; height: 10rem;" slot="start">
           <ion-img  [src]="offer.imageUrl"></ion-img>
         </ion-thumbnail>
         <ion-label>
@@ -26,6 +27,7 @@
           <ion-card-subtitle>{{offer.price | currency}}</ion-card-subtitle>
         </ion-label>
       </ion-item>
+
       </ion-col>
     </ion-row>
   </ion-grid>
