--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <ion-grid>
     <ion-row>
       <ion-col size-lg="8" offset-lg='2'>
@@ -15,8 +15,11 @@
         <ion-list *ngFor="let booking of loadedBookings">
             <ion-item>
               <ion-label>
-                <h5>{{booking.placeTitle}}</h5>
-                <p>Number Of Guests : {{booking.guestNumber}}</p>
+                <h2>{{booking.placeTitle}}</h2>
+                <p style="font-size:0.9rem;margin-top:5px;">Number Of Guests : {{booking.guestNumber}}</p>
+                <ion-button style="margin-top:5px;" (click)="onCanelBooking(booking.id)" >
+                  <ion-icon name="trash" slot="icon-only"></ion-icon>
+                </ion-button>
               </ion-label>
             </ion-item>
         </ion-list>
