--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -13,9 +13,9 @@
     <ion-row>
       <ion-col size="8" offset="2">
         <ion-img [src]="place.imageUrl" ></ion-img>
-        <ion-title>{{place.title}}</ion-title>
+        <h3>{{place.title}}</h3>
         <p> {{place.description}} </p>
-        <ion-button margin (click)="onBookPlace()">Book</ion-button>
+        <ion-button (click)="onBookPlace()">Book</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
