--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -4,15 +4,15 @@
       <ion-back-button defaultHref="/places/tabs/offers">
       </ion-back-button>
     </ion-buttons>
-    <ion-title>Experience Details</ion-title>
+    <ion-title>Experience Detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="text-align:center;">
-  <ion-title style="margin:50px;">{{place.title}}</ion-title>
+<ion-content style="text-align:center">
   <ion-grid>
     <ion-row>
-      <ion-col size="6" offset="3">
+      <ion-col size="6" offset="3" style="text-align:center">
+        <h3>{{place.title}}</h3>
         <ion-img [src]="place.imageUrl" ></ion-img>
         <p> {{place.description}} </p>
       </ion-col>
