--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -12,10 +12,10 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content >
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="1" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
+      <ion-col size="12" size-sm="8" offset-sm="2" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
 
         <ion-item>
         <ion-thumbnail style="width: 30%; height: 10rem;" slot="start">
