--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,17 +5,18 @@
 </ion-header>
 
 <ion-content padding style="text-align:center">
+  <form #f="ngForm">
     <ion-grid>
       <ion-row>
         <ion-col size="8" offset="2">
           <ion-list>
             <ion-item style="padding:5px;">
               <ion-label position="floating">E-mail</ion-label>
-              <ion-input type="email" value="test@testmail.com"></ion-input>
+              <ion-input type="email"  ngModel name="email" required email></ion-input>
             </ion-item>
             <ion-item style="padding:5px;">
               <ion-label position="floating">Password</ion-label>
-              <ion-input type="password" value="test@testpassword" ></ion-input>
+              <ion-input type="password" ngModel name="password" required minLength="4"></ion-input>
             </ion-item>
           </ion-list>
         </ion-col>
@@ -24,14 +25,14 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6" offset="3">
+          <ion-button type="button" expand="block" fill='clear'>Switch to Login</ion-button>
+
           <ion-spinner *ngIf="isLoading"></ion-spinner>
-          <ion-button expand="block" (click)="onLogin()" *ngIf="!isLoading" >
-            Login
-          </ion-button>
-          <ion-button  expand="block" fill='clear'>Switch to Login</ion-button>
+
+          <ion-button type="submit"expand="block" (click)="onSubmit(f)">Login</ion-button>
+
         </ion-col>
       </ion-row>
     </ion-grid>
-
-
+  </form>
 </ion-content>
