Added Experience edit form and bookings Forms

--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -9,7 +9,54 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content text-center padding>
+<ion-content style="text-align:center"padding>
   <h3>{{selectedPlace.title}}</h3>
-  <ion-button (click)="onBookPlace()">Book</ion-button>
+  <form>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">First Name</ion-label>
+          <ion-input type="text" ngModel name="first-name"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">Last Name</ion-label>
+          <ion-input type="text" ngModel name="last-name"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">Number Of Attendees</ion-label>
+          <ion-select [ngModel]="'2'" name="guest-number">
+            <ion-select-option value="1" >1 Attendee</ion-select-option>
+            <ion-select-option value="2" >2 Attendees</ion-select-option>
+            <ion-select-option value="3" >3 Attendees</ion-select-option>
+            <ion-select-option value="4" >4 Attendees</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-item>
+          <ion-label position="floating">Attend On</ion-label>
+          <ion-datetime display-format="MMM DD YYYY" picker-format="MMM DD" [min]="" [max]="" ngModel name="date-from" #startDateCtrl="ngModel"></ion-datetime>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6" offset="3">
+          <ion-button type="submit" size="block">Book</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+</form>
 </ion-content>
