--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Sign Up or Login</ion-title>
+    <ion-title>{{isLogin? 'Login' :'Signup'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
             </ion-item>
             <ion-item style="padding:5px;">
               <ion-label position="floating">Password</ion-label>
-              <ion-input type="password" ngModel name="password" required minLength="4"></ion-input>
+              <ion-input type="password" ngModel name="password" required minlength="4"></ion-input>
             </ion-item>
           </ion-list>
         </ion-col>
@@ -25,12 +25,9 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6" offset="3">
-          <ion-button type="button" expand="block" fill='clear'>Switch to Login</ion-button>
 
-          <ion-spinner *ngIf="isLoading"></ion-spinner>
-
-          <ion-button type="submit"expand="block" (click)="onSubmit(f)">Login</ion-button>
-
+          <ion-button type="button" expand="block" fill='clear' (click)="onSwitchAuthMode()">Switch to {{ isLogin ? 'Signup' : 'Login'}} </ion-button>
+          <ion-button type="submit"expand="block" (click)="onSubmit(f)">{{isLogin ? "Login" : 'Signup'}}</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
