--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{selectedPlace.title}}</ion-title>
+    <ion-title>Book The Experience</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="onCancel()" >
         <ion-icon name="close"></ion-icon>
@@ -11,7 +11,7 @@
 
 <ion-content style="text-align:center"padding>
   <h3>{{selectedPlace.title}}</h3>
-  <form>
+  <form (ngSubmit)="onBookPlace()" #f="ngForm">
   <ion-grid>
     <ion-row>
       <ion-col size="6" offset="3">
@@ -46,7 +46,7 @@
       <ion-col size="6" offset="3">
         <ion-item>
           <ion-label position="floating">Attend On</ion-label>
-          <ion-datetime display-format="MMM DD YYYY" picker-format="MMM DD" [min]="" [max]="" ngModel name="date-from" #startDateCtrl="ngModel"></ion-datetime>
+          <ion-datetime display-format="MMM DD YYYY" picker-format="YYYY MMM DD" [min]="selectedPlace.availableFrom.toISOString()" [max]="selectedPlace.availableTo.toISOString()" [ngModel]="startDate" name="date-from" #startDateCtrl="ngModel"></ion-datetime>
         </ion-item>
       </ion-col>
     </ion-row>
