--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -25,6 +25,16 @@
           <h2 style="text-align:center;">{{offer.title}}</h2>
           <p>{{offer.description}}</p>
           <ion-card-subtitle>{{offer.price | currency}}</ion-card-subtitle>
+          <ion-grid>
+            <ion-row>
+              <ion-col size="4" offset="2">
+                <ion-datetime disabled value="{{offer.availableFrom}}"></ion-datetime>
+              </ion-col>
+              <ion-col size="4" >
+                <ion-datetime disabled value="{{offer.availableTo}}"></ion-datetime>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </ion-label>
       </ion-item>
 
