Added Logic to Book an Experience update bookings model

--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -9,9 +9,9 @@
 
 
 <ion-content slot='fixed' no-padding>
-  <ion-grid style="padding:0px !important">
-    <ion-row>
-      <ion-col >
+  <ion-grid no-padding>
+    <ion-row no-padding>
+      <ion-col no-padding>
         <ion-img src='/assets/featuredImg.jpg' ></ion-img>
       </ion-col>
     </ion-row>
