--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -9,9 +9,20 @@
 
 <ion-content padding>
   <ion-grid>
+    <ion-row style="padding:20px;">
+      <ion-col  style="text-align:center">
+        <ion-label>
+          <ion-title>
+            Upcoming Experiences
+          </ion-title>
+        </ion-label>
+      </ion-col>
+    </ion-row>
     <ion-row>
-      <ion-col size-lg="8" offset-lg='2'>
-
+      <ion-col style="text-align:center" size-lg="8" offset-lg="2" *ngIf="!loadedBookings || loadedBookings.length==0">
+          <p>You don't have any booked experience</p>
+      </ion-col>
+      <ion-col size-lg="8" offset-lg='2' *ngIf="loadedBookings && loadedBookings.length > 0">
         <ion-list *ngFor="let booking of loadedBookings">
             <ion-item>
               <ion-label>
