--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -14,7 +14,16 @@
 </ion-header>
 <ion-content >
   <ion-grid>
-    <ion-row>
+    <ion-row style="text-align:center">
+      <div style="padding-left:48%;padding-top:50px" *ngIf="isLoading" >
+        <ion-spinner color="primary"> </ion-spinner>
+      </div>
+      <div style="padding-left:48%;padding-top:50px" *ngIf="!isLoading && loadedOffers.length<=0">
+        <p text-center >No Experiences Available! Offer one!</p>
+        <ion-button color="primary" routerLink="places/tabs/offers/new">Offer Experiences</ion-button>
+      </div>
+    </ion-row>
+    <ion-row *ngIf="!isLoading && loadedOffers.length>0">
       <ion-col size="12" size-sm="8" offset-sm="2" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
 
         <ion-item>
