--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -10,7 +10,10 @@
 
 
 <ion-content style="text-align:center;">
-  <ion-grid>
+  <div text-center *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <ion-grid *ngIf="!isLoading" >
     <ion-row>
       <ion-col size="8" offset="2">
         <ion-img [src]="place.imageUrl"></ion-img>
