--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -24,7 +24,7 @@
       </div>
     </ion-row>
     <ion-row *ngIf="!isLoading && loadedOffers.length>0">
-      <ion-col size="12" size-sm="8" offset-sm="2" *ngFor="let offer of loadedOffers" [routerLink]="['/','places','tabs','offers',offer.id]">
+      <ion-col size="12" size-sm="8" offset-sm="2" *ngFor="let offer of loadedOffers" >
 
         <ion-item>
         <ion-thumbnail style="width: 30%; height: 10rem;" slot="start">
